# BookLogger

./: .gitignore  app.py  pyproject.toml  requirements.txt  scraper.py
.streamlit/: secrets.toml
src/: barcode.py  models.py  ocr.py  repository.py  services.py  utils.py
src/lookups/: google_books.py  isbndb.py  openlibrary.py  web_fallback.py
